--- a/Web_3/public/css/app.css
+++ b/Web_3/public/css/app.css
@@ -1,4 +1,85 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);/*!
+@import url(https://fonts.googleapis.com/css?family=Nunito);nav {
+  background: burlywood !important;
+  color: white !important;
+}
+
+nav ul li a {
+  color: white !important;
+}
+
+.nav-item {
+  font-size: 20px !important;
+}
+
+#login {
+  padding-left: 115% !important;
+}
+
+footer {
+  background: burlywood !important;
+  color: white !important;
+  margin-top: 10% !important;
+}
+
+footer {
+  padding-top: 20px !important;
+  padding-bottom: 25px !important;
+  bottom: 0 !important;
+  width: 100% !important;
+  margin-top: 5% !important;
+}
+
+.registerLogin {
+  float: right !important;
+}
+
+body {
+  background-image: url("https://t3.ftcdn.net/jpg/00/84/55/66/240_F_84556601_W71hd1xmCxZUhsscyNlokY1an7Kqx6ZJ.jpg");
+}
+
+.list-group li {
+  background: burlywood !important;
+  opacity: 0.9;
+}
+
+h1 {
+  text-align: center !important;
+  font-family: "Comic Sans MS", cursive, sans-serif !important;
+  margin-top: 40px !important;
+  margin-bottom: 30px !important;
+  font-style: oblique !important;
+  font-weight: bold !important;
+}
+
+.list-group li h2 {
+  color: black;
+  font-style: oblique !important;
+  font-family: "Comic Sans MS", cursive, sans-serif !important;
+}
+
+.list-group li {
+  margin-bottom: 15px !important;
+}
+
+.info {
+  float: right !important;
+  color: white;
+  font-size: 20px;
+  margin-left: 40px !important;
+  margin-top: 30px !important;
+  font-family: "Comic Sans MS", cursive, sans-serif !important;
+}
+
+.readMore {
+  color: dodgerblue !important;
+  float: right !important;
+}
+
+img {
+  border-radius: 5px !important;
+}
+
+/*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
  * Copyright 2011-2018 Twitter, Inc.
@@ -10464,34 +10545,6 @@ a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6;
   }
-}
-
-nav {
-  background: burlywood !important;
-  color: white !important;
-}
-
-nav ul li a {
-  color: white !important;
-}
-
-.nav-item {
-  font-size: 20px !important;
-}
-
-footer {
-  background: burlywood !important;
-  color: white !important;
-  margin-top: 34% !important;
-}
-
-footer {
-  padding-top: 15px !important;
-  padding-bottom: 20px !important;
-}
-
-body {
-  background-image: url("https://t3.ftcdn.net/jpg/00/84/55/66/240_F_84556601_W71hd1xmCxZUhsscyNlokY1an7Kqx6ZJ.jpg");
 }
 
 .navbar-laravel {
