--- a/Web_3/resources/sass/_custom.scss
+++ b/Web_3/resources/sass/_custom.scss
@@ -10,7 +10,7 @@ nav ul li a{
   font-size: 20px!important;
 }
 #login{
-  padding-left: 115%!important;
+  padding-left: 120%!important;
 }
 
 // footer
@@ -73,8 +73,72 @@ h1{
 img{
   border-radius: 5px!important;
 }
-
-
+// show one
+.coverImage{
+  display: block!important;
+  margin-left: auto!important;
+  margin-right: auto!important;
+  margin-top: 30px;
+  box-shadow: 1px 1px 2px black, 0 0 25px black!important;
+}
+.Infotitle{
+  color: royalblue;
+  margin-top: 20px!important;
+}
+.wrapper{
+  text-align: center;
+margin-left: 20%;
+  margin-right: 20%;
+}
+.alldogs{
+  list-style-type: none;
+  margin-top: 70px;
+}
+.alldogs li{
+  display: inline-block!important;
+  margin-right: 60px;
+  margin-bottom: 50px;
+  background: black!important;
+  padding: 20px 25px 20px 25px;
+  border-radius: 5px!important;
+}
+.changePages{
+  margin-left: 45%!important;
+}
+.alldogs li h2{
+  text-align: center!important;
+  margin-top: 10px!important;
+  color: whitesmoke!important;
+}
+.alldogs img{
+  margin-left: auto;
+  margin-right: auto;
+}
+.center{
+  display: block!important;
+  margin-left: auto!important;
+  margin-right: auto!important;
+  text-align: center!important;
+}
+#backButton{
+  float:left;
+}
+#nextButton{
+  float:right;
+}
+.writtenon{
+  float:right;
+  margin-right: 5px;
+}
+.wholepost{
+  background: white;
+  margin-left: 200px;
+  margin-right: 200px;
+  margin-top: 40px;
+  padding-top: 20px;
+  border-radius: 10px;
+  border: solid gray 2px;
+}
 
 
 
