--- a/Web_3/resources/sass/_custom.scss
+++ b/Web_3/resources/sass/_custom.scss
@@ -123,6 +123,7 @@ margin-left: 20%;
 }
 #backButton{
   float:left;
+  margin-left: -30px!important;
 }
 #nextButton{
   float:right;
@@ -140,6 +141,15 @@ margin-left: 20%;
 #editanddelete{
   margin: 10px;
 }
+footer {
+
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  text-align: center;
+}
+
 
 
 
