--- a/Web_3/public/css/app.css
+++ b/Web_3/public/css/app.css
@@ -168,6 +168,19 @@ footer {
   text-align: center;
 }
 
+.avatar_image {
+  background: white !important;
+  padding-bottom: 20px;
+  padding-top: 10px;
+  margin-top: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 58%;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  border: solid grey 0.5px;
+}
+
 /*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
