--- a/Web_3/resources/sass/_custom.scss
+++ b/Web_3/resources/sass/_custom.scss
@@ -149,6 +149,18 @@ footer {
   color: white;
   text-align: center;
 }
+.avatar_image{
+  background:white!important;
+  padding-bottom:20px;
+  padding-top:10px;
+  margin-top:15px;
+  margin-left:auto;
+  margin-right:auto;
+  width:58%;
+  border-radius:10px;
+  margin-bottom:20px;
+  border: solid grey 0.5px;
+}
 
 
 
